# pixel-engine

./: .gitignore  ARCHITECTURE.md  ARENA_ALLOCATOR.md  ASSET_WATCHER_TEST.md  CMakeLists.txt  DESTRUCTIBLE_BLOCKS.md  MEMORY_OPTIMIZATION.md  OPTIMIZATION_RESULTS.md  PixelEngine.sln  README.md  VULKAN_ERROR_HANDLING.md  assets.npak  test_asset_discovery  verify_destructible_blocks.sh
.github/: WORKFLOW_SETUP.md  copilot-instructions.md
.github/workflows/: build.yml
PixelEngine/: PixelEngine.vcxproj  PixelEngine.vcxproj.filters  anim_test.aseprite  bg.til  character_util.h  collision.cpp  collision.h  debug-windows.cpp  debug.h  debug_blit_chr.comp  debug_blit_chr_comp.spv  debug_blit_pal.comp  debug_blit_pal_comp.spv  editor.cpp  editor.h  editor_chr.cpp  editor_chr.h  editor_collision.cpp  editor_collision.h  editor_core.cpp  editor_core.h  editor_debug.cpp  editor_debug.h  editor_metasprite.cpp  editor_metasprite.h  editor_sprites.cpp  editor_tiles.cpp  editor_tiles.h  editor_util.cpp  editor_util.h  fixed.cpp  fixed.h  game.cpp  game.h  imgui.ini  input.cpp  input.h  level.cpp  level.h  leveleditor.cpp  (+36 more)
assets/: Apple.anim  FreyaAim.anim  FreyaMapRight.anim  HaloLarge.anim  SkullIdle.anim  actors.ass  actors.pfb  actors.prt  damage.nsf  dungeons.ass  exp.nsf  famicube.pal  forest.til  levels.lev  meta.spr  overworld.ass  ricochet.nsf  rooms.ass  test.dng  test.lev  tileset.ass
assets/actor_prototypes/: apple.actor  arrow.actor  axolotl_boss.actor  big_explosion.actor  checkpoint.actor  common_loot_spawner.actor  damage_numbers.actor  enemy_fireball.actor  exp_remnant.actor  exp_spawner.actor  feather.actor  freya.actor  freya_overworld.actor  halo_large.actor  halo_small.actor  hit_small.actor  player_arrow.actor  player_grenade.actor  skull_enemy.actor  slime.actor
assets/animations/: checkpoint_active.anim  checkpoint_inactive.anim
assets/animations/effects/: explosion_large.anim  explosion_small.anim  feather.anim
assets/animations/enemies/: axolotl_boss_idle.anim  skull_idle.anim  slime_idle.anim
assets/animations/freya/: freya_aim.anim  freya_die.anim  freya_dmg.anim  freya_fall.anim  freya_fly.anim  freya_jump.anim  freya_map_down.anim  freya_map_left.anim  freya_map_right.anim  freya_map_up.anim  freya_sit.anim  freya_sit_up.anim  freya_wings.anim
assets/animations/pickups/: apple.anim  halo_large.anim  halo_small.anim
assets/animations/projectiles/: arrow.anim  fireball.anim  grenade.anim
assets/animations/weapons/: bow.anim  launcher.anim
assets/dungeons/: passthrough_test.dung  test_cave.dung
assets/overworlds/: default.ow
assets/rooms/: README_ZELDA2_ROOMS.md  exit_bottom.room  exit_top.room  save_room.room  scroll_test.room  sublevel.room  test.room  zelda2_castle.room  zelda2_cave.room  zelda2_combat.room  zelda2_sidescroll.room
assets/sfx/: enemydie.nsf  gun1.nsf  jump.nsf  ricochet.nsf
assets/shaders/: blit.slang  editor_chr_indexed.slang  editor_palette_apply.slang  software.slang
assets/sprites/: checkpoint_0.sprite  checkpoint_1.sprite  shield.sprite
assets/sprites/effects/explosion_large/: explosion_large_0.sprite  explosion_large_1.sprite  (+2 more)
assets/sprites/enemies/: axolotl_boss.sprite  skull.sprite
assets/sprites/freya/: freya_dead.sprite  freya_dmg_down.sprite  freya_dmg_fwd.sprite  freya_dmg_up.sprite  freya_down.sprite  freya_fall.sprite  freya_fall_down.sprite  freya_fall_fwd.sprite  freya_fall_up.sprite  freya_fly_down.sprite  freya_fly_fwd.sprite  freya_fly_up.sprite  freya_fwd.sprite  freya_jump_down.sprite  freya_jump_fwd.sprite  freya_jump_up.sprite  freya_kneel.sprite  freya_sit.sprite  freya_up.sprite  freya_wings_0.sprite  freya_wings_1.sprite  freya_wings_2.sprite  freya_wings_3.sprite
assets/sprites/pickups/: apple.sprite
assets/sprites/weapons/: bow_diag.sprite  bow_down.sprite  bow_fwd.sprite  bow_up.sprite  launcher_diag.sprite  launcher_down.sprite  launcher_fwd.sprite  launcher_up.sprite
assets/tilesets/: debug.tset
build_headless/: CMakeCache.txt  Makefile  cmake_install.cmake  pixelengine
docs/: asset_allocation.md
src/: actor_behaviour.h  actor_data.h  actor_prototypes.cpp  actor_prototypes.h  actor_reflection.h  actor_tables.h  actor_types.cpp  actor_types.h  actors.cpp  actors.h  animation.h  asset_allocator.cpp  asset_allocator.h  asset_archive.cpp  asset_archive.h  asset_manager.cpp  asset_manager.h  asset_serialization.cpp  asset_serialization.h  asset_types.h  asset_watcher.cpp  asset_watcher.h  audio.cpp  audio.h  audio_headless.cpp  bullet.cpp  bullet.h  bullets.cpp  bullets.h  checkpoint.cpp  checkpoint.h  chr_sheet.cpp  chr_sheet.h  chr_stream.cpp  chr_stream.h  collision.cpp  collision.h  core_types.h  coroutines.cpp  coroutines.h  (+123 more)
src/assets/: CMakeLists.txt
src/assets/shared/: actor_types.h  asset_serialization.cpp  asset_serialization.h  audio_types.h  collision_types.h  debug.cpp  dungeon_types.h  pickup_data.h  tilemap_types.h
src/audio/: CMakeLists.txt  audio_api.h
src/core/: CMakeLists.txt  README.md  core.h  fixed_hash_map.h  input.cpp
src/editor/: CMakeLists.txt  editor.cpp  editor.h  editor_assets.cpp  editor_assets.h
src/game/: CMakeLists.txt  README.md  actors.cpp  bullet.cpp  coroutines.cpp  effect.cpp  enemy.cpp  game.h  game_api.h  game_input.cpp  game_state.cpp  game_ui.h  interactable.cpp  interactable.h  pickup.h  spawner.cpp  spawner.h
src/rendering/: CMakeLists.txt  README.md  rendering_api.h  rendering_util.cpp
src/shaders/: debug_blit_chr.comp  debug_blit_pal.comp  scanline_evaluate.comp  software.comp
src/shaders/opengl/: quad.vert  software.comp  textured_crt.frag  textured_raw.frag
src/shared/: actor_data.h  actor_prototype_types.h  asset_archive.cpp  asset_manager.cpp  asset_manager.h  asset_serialization.cpp  asset_serialization.h  asset_types.h  bullet_data.h  interactable_data.h  overworld_types.h  rendering_types.h  room_types.h  system_types.h  typedef.h  world_types.h
src/tools/: asset_packer.cpp
tests/: example_automated_test.cpp  test_headless.sh
tools/: README.md  asset_packer.cpp  simple_asset_packer.cpp
(+42 files in other folders)
